fix weird angle bracket escaping from wordpress

--- a/templates/posts/2021-02-03-pandas.md
+++ b/templates/posts/2021-02-03-pandas.md
@@ -129,7 +129,7 @@ Okay, seems reasonable enough. And yet, disappointingly, if I wanted to isolate 
 ```python
 >>> df.isna(subset=['scientific_name'])
 Traceback (most recent call last):
-  File "&lt;stdin>", line 1, in &lt;module>
+  File "<stdin>", line 1, in <module>
 TypeError: isna() got an unexpected keyword argument 'subset'
 ```
 
@@ -171,7 +171,7 @@ Right, okay, so far so good, except for the fact that my [dastardly butterfly ke
 ```python
 >>> df.rename(names={'wingspann': 'wingspan'})
 Traceback (most recent call last):
-  File "&lt;stdin>", line 1, in &lt;module>
+  File "<stdin>", line 1, in <module>
   File "/home/vasundhara/venv/lib/python3.7/site-packages/pandas/util/_decorators.py", line 312, in wrapper
     return func(*args, **kwargs)
 TypeError: rename() got an unexpected keyword argument 'names'
@@ -228,7 +228,7 @@ Name: c, dtype: bool
 dtype('int64')
 >>> df.index.isnumeric()
 Traceback (most recent call last):
-  File "&lt;stdin>", line 1, in &lt;module>
+  File "<stdin>", line 1, in <module>
 AttributeError: 'RangeIndex' object has no attribute 'isnumeric'
 >>> df.index.is_numeric() # see that? it's an underscore. I know.
 True
@@ -236,13 +236,13 @@ True
 >>> # How about trying this with a different thing that's an integer dtype
 >>> df.a.is_numeric() # nope
 Traceback (most recent call last):
-  File "&lt;stdin>", line 1, in &lt;module>
+  File "<stdin>", line 1, in <module>
   File "/home/vasundhara/venv/lib/python3.7/site-packages/pandas/core/generic.py", line 5462, in __getattr__
     return object.__getattribute__(self, name)
 AttributeError: 'Series' object has no attribute 'is_numeric'
 >>> df.a.isnumeric() # still nope
 Traceback (most recent call last):
-  File "&lt;stdin>", line 1, in &lt;module>
+  File "<stdin>", line 1, in <module>
   File "/home/vasundhara/venv/lib/python3.7/site-packages/pandas/core/generic.py", line 5462, in __getattr__
     return object.__getattribute__(self, name)
 AttributeError: 'Series' object has no attribute 'isnumeric'
@@ -263,19 +263,19 @@ Why provide convenience methods like [is_numeric()](https://pandas.pydata.org/pa
 2  False  False  False
 >>> df.isempty() # of course this doesn't work
 Traceback (most recent call last):
-  File "&lt;stdin>", line 1, in &lt;module>
+  File "<stdin>", line 1, in <module>
   File "/home/vasundhara/venv/lib/python3.7/site-packages/pandas/core/generic.py", line 5462, in __getattr__
     return object.__getattribute__(self, name)
 AttributeError: 'DataFrame' object has no attribute 'isempty'
 >>> df.is_empty()
 Traceback (most recent call last):
-  File "&lt;stdin>", line 1, in &lt;module>
+  File "<stdin>", line 1, in <module>
   File "/home/vasundhara/venv/lib/python3.7/site-packages/pandas/core/generic.py", line 5462, in __getattr__
     return object.__getattribute__(self, name)
 AttributeError: 'DataFrame' object has no attribute 'is_empty'
 >>> df.empty() # how could I possibly expect any semblance of consistency
 Traceback (most recent call last):
-  File "&lt;stdin>", line 1, in &lt;module>
+  File "<stdin>", line 1, in <module>
 TypeError: 'bool' object is not callable
 >>> df.empty
 False
@@ -291,13 +291,13 @@ _Siiiiiiiiiiighhhhhhh_.
 Name: b, dtype: bool
 >>> df.b.isunique()
 Traceback (most recent call last):
-  File "&lt;stdin>", line 1, in &lt;module>
+  File "<stdin>", line 1, in <module>
   File "/home/vasundhara/venv/lib/python3.7/site-packages/pandas/core/generic.py", line 5462, in __getattr__
     return object.__getattribute__(self, name)
 AttributeError: 'Series' object has no attribute 'isunique'
 >>> df.b.is_unique()
 Traceback (most recent call last):
-  File "&lt;stdin>", line 1, in &lt;module>
+  File "<stdin>", line 1, in <module>
 TypeError: 'bool' object is not callable
 >>> df.b.is_unique
 True
