lint with smartquote fixer

--- a/templates/posts/2020-05-05-platypus.md
+++ b/templates/posts/2020-05-05-platypus.md
@@ -18,5 +18,5 @@ poem {
 By the grave and stern decorum of the brown fedora it wore,
 "Though thy temple be capped and hidden, thou," I said, "art sure no craven,
 Sage, mysterious Platypus wandering from the Tasmanian shore—
-Tell me what thy lordly name is on the Night’s Plutonian shore!"
+Tell me what thy lordly name is on the Night's Plutonian shore!"
 Per the platypus "Agent P."</poem>
