extract and refactor custom CSS for poetry

--- a/templates/posts/2020-05-05-platypus.md
+++ b/templates/posts/2020-05-05-platypus.md
@@ -4,15 +4,10 @@ description: Instead of meeting a raven, Edgar Allan Poe meets Phineas and Ferb'
 date: 2020-05-05
 tags:
   - poetry
+additionalcss:
+  - "static/css/poem.css"
 layout: layouts/post
 ---
-
-<style>
-poem {
-  white-space: pre-wrap;
-  font-style: italic;
-}
-</style>
 
 <poem>Then this egg-laying mammalian moving my sad fancy into smiling,
 By the grave and stern decorum of the brown fedora it wore,
