--- a/templates/posts/2021-10-02-germany.md
+++ b/templates/posts/2021-10-02-germany.md
@@ -6,6 +6,8 @@ tags:
   - germany
   - bureaucracy
   - birds
+additionalcss:
+  - "static/css/poem.css"
 layout: layouts/post
 ---
 
@@ -44,31 +46,27 @@ This place is at the high end of my budget but clearly it checked a lot of boxes
 
 I am most grateful to her for how much she has demystified about German life for me. She let me go shopping with her one day because I wanted to watch someone in their element navigate stores here, to learn how things worked. When I first moved to Canada I remember quickly learning that you didn't just go up to the coffee shop counter and say what you wanted. There's a script and it goes like this:
 
-<pre style="white-space: pre-wrap;">
-Cashier: "Hi, how are you today?"
+<poem>Cashier: "Hi, how are you today?"
 You: "I'm fine, how are you?"
 Cashier: "Good, thanks! What can I get for you?"
-You: *place your order*
+You: _place your order_
 Cashier: "Is that everything?"
-You: *order more things* [or] "Nope, that's all."
+You: _order more things_ [or] "Nope, that's all."
 Cashier: "Your total is SomeNumber. How would you like to pay?"
 You: "Just on debit!" (this later changed to "just on VISA" when I got a credit card)
 Cashier: "Would you like your receipt?"
 You: "No thanks."
 Cashier: "Have a nice day!"
-You: "Thanks, you too!"
-</pre>
+You: "Thanks, you too!"</poem>
 
 Deviating from this script would result in weird looks. And it's all very regional as well. I remember my "just on VISA" bit getting a confused eyebrow raise in Seattle even though it was universally accepted just 2 hours north in Vancouver! So this shopping trip with my landlady was very useful and I learned a simple German grocery/supermarket script that has been serving me well. It's less verbal here compared to Canada:
 
-<pre style="white-space: pre-wrap;">
-Cashier: "Hallo!"
+<poem>Cashier: "Hallo!"
 You: "Hallo!"
-Cashier: *scans items and tells you your total*
-You: *either understand what they said or peek at the register, then hand them money*
-Cashier: *hands you your receipt and your change, telling you how much it is* "Tschüss!"
-You: *scramblingly put your change into your too-small pockets* "Danke schön, tschüss!"
-</pre>
+Cashier: _scans items and tells you your total_
+You: _either understand what they said or peek at the register, then hand them money_
+Cashier: _hands you your receipt and your change, telling you how much it is_ "Tschüss!"
+You: _scramblingly put your change into your too-small pockets_ "Danke schön, tschüss!"</poem>
 
 ### Painter
 
