remove inline styling for 404 centering

--- a/templates/404.md
+++ b/templates/404.md
@@ -6,6 +6,6 @@ layout: layouts/layout
 permalink: 404.html
 ---
 
-<p style="text-align: center">
+<p class="centred">
 We searched high and low but could not find what you were looking for...
 </p>
