replace previous domain with dippedrusk

--- a/templates/posts/2021-11-25-autism.md
+++ b/templates/posts/2021-11-25-autism.md
@@ -55,7 +55,7 @@ Because of these responses, I haven't felt as comfortable talking about other th
 
 ### Autism and gender
 
-There's also a correlation between gender-nonconformance and autism that's interesting to think about in the context of my being agender. I've said plenty about [my gender](https://vasundharagautam.com/posts/2021-07-14-gender-repeal/) and [my pronouns](https://kconrod.medium.com/guest-lecture-in-pronouns-vasundhara-1c61d3023e0c) before, so I won't say more other than that all of these puzzle pieces sure seem to fit very well together in my understanding of myself.
+There's also a correlation between gender-nonconformance and autism that's interesting to think about in the context of my being agender. I've said plenty about [my gender](/posts/2021-07-14-gender-repeal/) and [my pronouns](/posts/2021-07-14-neopronouns/) before, so I won't say more other than that all of these puzzle pieces sure seem to fit very well together in my understanding of myself.
 
 ## Future work, future writing and thank yous
 
