edit post - autism interview

--- a/templates/posts/2022-05-17-autism.md
+++ b/templates/posts/2022-05-17-autism.md
@@ -18,7 +18,7 @@ With the first, it helps to articulate to other people what I need from them and
 
 Another communication thing that I mentioned in my initial blog post was having days or times when words are hard, or when speaking is hard. When I can understand and frame this as an autistic need, it makes it easier for me to ask friends whether we can do texting hangouts instead of a voice call, or a voice call instead of a video call, for example, because it would require less energy.
 
-In terms of how it helps my own personal understanding of things, most of it has to do with just letting myself just exist and allowing myself to do the things I want and need to do to give my body comfort. I have gotten much more comfortable stimming, especially when I'm on my own but now even when I'm in the presence of other people but not "performing" attention. I will play with my fountain pen cap and shake my legs and rock and bounce in my chair and do whatever else my body just wants to do. I will myself eat my samefoods without judgement or anxiety about how it appears to other people or how it's "weird." I can respect the times that I go into focus-mode about birds and don't want to talk to anyone, without judging it or thinking that I'm being rude. Of course, there's a balance to some of these things especially when they involve other people who want attention and time from you, but here the key has been having friends who are willing to work with me collaboratively on solutions that don't require me to be a different neurotype.
+In terms of how it helps my own personal understanding of things, most of it has to do with letting myself just exist and allowing myself to do the things I want and need to do to give my body comfort. I have gotten much more comfortable stimming, especially when I'm on my own but now even when I'm in the presence of other people but not "performing" attention. I will play with my fountain pen cap and shake my legs and rock and bounce in my chair and do whatever else my body just wants to do. I will let myself eat my samefoods without judgement or anxiety about how it appears to other people or how it's "weird." I can respect the times that I go into focus-mode about birds and don't want to talk to anyone, without judging it or thinking that I'm being rude. Of course, there's a balance to some of these things especially when they involve other people who want attention and time from you, but here the key has been having friends who are willing to work with me collaboratively on solutions that don't require me to be a different neurotype.
 
 In addition to things that increase my general comfort, it is also very helpful to understand that what I sometimes experience if I go too hard or if shit happens has a name - sensory overload and meltdowns. I've been learning about the things that give me comfort in these situations, giving myself permission to do these things my body needs when I get into this state, and also to try and understand what some of the triggers are so that I can reorganize my life so that I'm not consistently experiencing autistic burnout.
 
@@ -94,7 +94,7 @@ This level of sensory stuff tends to be somewhat manageable with specific strate
 
 In terms of strategies against sensory stuff, since sound is my big thing I chose to live somewhere where sound wouldn't be a regular issue for me - unlike, e.g., the city centre. I also have excellent noise cancelling headphones and I recently bought earplugs as well that don't block out all noise but have a calming effect on me. Also one of my best investments since moving to Germany was to buy a weighted blanket because I find when I'm feeling sensory or just generally stressed out for any reason, it makes me feel noticeably calmer to have my body be gently crushed.
 
-I also have strategies to avoid getting to meltdown. I have been trying to be a little more intentional about mitigating stress and exposure to sensory stuff, e.g., by always wearing headphones to the grocery store, by spacing out my social commitments, by putting non-speaking days on my calendar for general recovery, and just trying to mitigate the stressors in my life from school and work as much as possible. Another thing is giving myself permission to do the autistic things that help with managing stress, e.g., giving myself permission to eat samefoods when I'm stressed out, allowing myself to stim more in class and on calls and even outside of that, etc.
+I also have strategies to avoid getting to meltdown. I have been trying to be more intentional about mitigating stress and exposure to sensory stuff, e.g., by always wearing headphones to the grocery store, by spacing out my social commitments, by putting non-speaking days on my calendar for general recovery, and just trying to mitigate the stressors in my life from school and work as much as possible. Another thing is giving myself permission to do the autistic things that help with managing stress, e.g., giving myself permission to eat samefoods when I'm stressed out, allowing myself to stim more in class and on calls and even outside of that, etc.
 
 I've had a lot of internalized baggage about this sort of stuff for a long time and allistic society's messaging about all of this doesn't help either, but this is where listening to autistic people and respecting my autistic body's needs is important and ongoing work.
 
