--- a/templates/posts/2022-10-31-reading.md
+++ b/templates/posts/2022-10-31-reading.md
@@ -12,9 +12,11 @@ layout: layouts/post
 
 ### Papers
 
+- Liu, R., & Shange, S. (2018). Toward Thick Solidarity.
+- Collins, P. H., da Silva, E. C. G., Ergun, E., Furseth, I., Bond, K. D., & Martínez-Palacios, J. (2021). Intersectionality as Critical Social Theory.
+
 ## For pay
 
 ### Papers
 
 - Shi, H., Livescu, K., & Gimpel, K. (2021). Substructure Substitution: Structured Data Augmentation for NLP.
-- 
