--- a/templates/posts/2022-10-31-reading.md
+++ b/templates/posts/2022-10-31-reading.md
@@ -20,3 +20,9 @@ layout: layouts/post
 ### Papers
 
 - Shi, H., Livescu, K., & Gimpel, K. (2021). Substructure Substitution: Structured Data Augmentation for NLP.
+- Hamidi, F., Scheuerman, M. K., & Branham, S. M. (2018). Gender Recognition or Gender Reductionism?: The Social Implications of Embedded Gender Recognition Systems.
+- Scheuerman, M. K., Jiang, A., Spiel, K., & Brubaker, J. R. (2021). Revisiting Gendered Web Forms: An Evaluation of Gender Inputs with (Non-)Binary People.
+- Haverkamp, A., Bothwell, M., Montfort, D., & Driskill, Q.-L. (2021). Calling for a Paradigm Shift in the Study of Gender in Engineering Education.
+- Scheuerman, M. K., Pape, M., & Hanna, A. (2021). Auto-essentialization: Gender in automated facial analysis as extended colonial project.
+- Keyes, O., May, C., & Carrell, A. (2021). You Keep Using That Word: Ways of Thinking about Gender in Computing Research.
+- Wang, A., Ramaswamy, V. V., & Russakovsky, O. (2022). Towards Intersectionality in Machine Learning: Including More Identities, Handling Underrepresentation, and Performing Evaluation.
