--- a/templates/posts/2022-10-31-vampires.md
+++ b/templates/posts/2022-10-31-vampires.md
@@ -1,10 +1,94 @@
 ---
 title: Variation in Vampires
-description: The time I watched 30-50 vampire films in October to study the genre and learn things.
+description: The time I watched 30-50 vampire films to study the genre and learn things.
 tags:
   - film
 layout: layouts/post
 ---
+
+I once spent a month watching one xmas movie per day to study the genre and I want to do it again this October with vampire movies - please tell me your favourite vampire movies
+
+## themes to cover
+
+### intertextuality
+
+### subtlety
+
+wir sind die Nacht, hour of the wolf
+
+### how vampires are raced
+
+Black vampires, antisemitism, othering, that ballet performance with the Chinese vampire, non-European vampire lore, German/Transylvanian/Romanian vampires
+
+## gender/sexuality
+
+where 2 start. queer vampires, bisexual vampires, explicitly trans vampires, the kill all men trope, fear of the other once again
+
+## do i have anything to say about class???
+
+idk, are ALL vampires actually the aristocratic type? eh... need 2 think about it more
+
+## vampire traits
+
+everything conflicts... is there a unifying vampire trait? what is it?
+
+## notes
+
+List from Sy and crowdsourced on Twitter (RIP my Twitter)
+
+Watching vampire films and taking notes on vampire appearances - 3/3 are pale, 2/3 have long fingernails, and under this latest movie I just have "appearance: antisemitic??"
+
+Pale, shiny eyes, drink blood, blood doesn't need to be fresh from the body, can be children or whatever, sunlight sets them on flames, very cold but don't feel cold, human food makes them throw up, no fangs, Need to be invited in verbally, "not a girl"
+
+Pale, ridiculously strong, can be disabled with various sacred things and uncooked sticky rice, have very long painted nails and fangs, hop! Don't need to be invited in verbally, Know where you are because of your breathing (holding your breath stops them), Killed by stake through the heart and/or incineration
+
+Pale, long nails, fucked up looking, travels by coffin, sleeps in a coffin, killed by sunlight, draw their strength from the earth in which they were buried, appearance: antisemitic, Distracted by hot girls, he/him but secretly they/them??? intertextuality - book
+
+pale, drink blood, blood doesn't need to be fresh from the body (21st century blood is contaminated), avoid sunlight (sleep through the day), wear gloves so as to not read each other, fangs appear when they drink blood, bad luck not to be invited across a threshold, killed by wood (wooden bullet, not just stake), autistic, travelling is bad for them, he/him, they/them etc. v old and secretly passing on art and science to humans, referred to as "zombies"
+"the concept of vampires as like artists and scientists behind most of what we have and who we venerate is so cool I love it! Also the vampires in this pinged me as v autistic hahaha"
+
+no fangs, old woman, plague associations, terrible deeds in life deny them repose in the grave, they rise from their graves on full moon nights suck the blood of children and young adults, "doctors assigned the plague a medical name, but a persistent rumour circulated among the people that a vampire was the cause of the scourge", drives victims to suicide which is bad for xtian reasons, killed by iron stake through the heart, vampire curse lifted when the vampire is killed, people are cured
+
+Long nails, pale, order to protect Christ??, Can move in the daytime but powers are weak and it's "not his time", fangs come out when they're about to feed, garlic, van helsing fights vampires, xtian stuff is anti vampire, Stake through the heart AND slash their head
+
+Pale, fangs, old (200 years), moves fast, turned at 24, can look at crucifixes, needs to sleep in coffins, stake through the heart is a myth, permafangs, light eyes, dark gift e.g. mind reading, hair grows back immediately, long nails, burned by sunlight, killed by burning, h
+
+permafangs, can't eat human food, can't go into the sunlight, sleep in coffins, turn into bats, cannot look at crucifixes, enmity with werewolves
+
+cameras capture tem
+
+pale (lost a lot of blood, look at his colour), fangs before feeding, cameras dont capture them, repelled by crucifixes, killed by sun,
+
+lifeforce: pale, beautiful, live off "life force", aliens, iron stake BELOW the heart, can shapeshift
+
+valerie: grotesque teeth, draw small amounts of blood not to kill
+
+Buffy: looks like shit, fangs, needs to be invited in, can float, stake through heart
+
+Abraham Lincoln: vampires cannot kill their own, normal but turn vampirey (pale, fangs, grotesque), killed by silver
+
+van helsing: disintegrate on contact with silver, transform into demon creatures with wings, have lackeys, dracula is the centre of everything, avoid sunlight, fangs appear before feeding, only werewolves can kill dracula
+
+blade: secret cabal owning and running everything including the police, destryoed by silver, garlic anaphylactic shock, familiars, dhampirs, sunblock!
+
+Vampire in brookyln: rips heart right out of the guy, dhampir stuff, look this up!!!
+
+Ganja and hess: dagger to convert, they feel cold, they can eat normal food,
+"dreamlike vampire film which uses vampirism to explore Black assimilation, white cultural imperialism, and the hypocrisy of organised religion"
+
+Thirst: doesn't die when jumps out of window, some virus backstory, welts when he doesn't drink blood, sensitive to smell, visible in mirrors, sunlight kills them, can jump high and slow,
+
+Dracula and his wives turn into wolves and bats, dies without blood, repelled by crosses and wolfsbane, vampire curse lifted when people cured, killed by sunlight
+
+Daughters of darkness: running water
+
+count rice grains
+
+it's interesting that now in 2/5 movies there is a book in-movie that explains vampires to the people, whereas in the other 3 it's just kinda taken as assumed knowledge - it seems like the book itself might be a recurring character in vampire films
+
+vampyr: like the modern thing would be that vampires turn other people into vampires and they can't be turned back they just have to be destroyed, whereas this film doesn't operate by that logic. acc to this film people are just cursed by a vampire (makes them suicidal) and then the vampire can be killed and the curse is lifted
+
+Watched interview with the vampire yesterday it had surprisingly gay vibes and was narratively v interesting. Antonio Banderas as a vampire is sooooo hot. I also just really love the concept of actually seeing time pass (centuries!) through a vampire's eyes. Most other movies are set in a much shorter timespan or if they show this at all it's for a tiny bit of background setting rather than the focus of the story. 
 
 ## List of films
 
@@ -38,3 +122,17 @@ layout: layouts/post
 28. Shadow of the Vampire
 29. The Lullaby
 30. Ganja & Hess
+31. Thirst
+32. Dracula
+33. From Dusk Till Dawn
+34. The Hunger
+35. Bit
+36. The Lost Boys
+37. Dracula
+38. Daughters of Darkness
+39. Let Me In
+40. Raw
+41. Vampire's Kiss
+42. Salem's Lot
+43. We Are The Night
+44. Carmilla
