--- a/templates/posts/2022-10-31-vampires.md
+++ b/templates/posts/2022-10-31-vampires.md
@@ -6,11 +6,21 @@ tags:
 layout: layouts/post
 ---
 
-I once spent a month watching one xmas movie per day to study the genre and I want to do it again this October with vampire movies - please tell me your favourite vampire movies
+I once spent a month watching one Christmas movie per day to study the genre and I recently wanted to do it again with vampire movies, so I solicited recommendations from friends and Twitter and spent about five weeks watching 47 vampire movies. As a newly-minted vampire scholar, I'd like to show you some of the things I learned on this journey.
+
+## A grand unified theory of vampires
+
+My main goal was to come up with a unified theory of vampires. I went into this project familiar with the usual dollar-store-Halloween-costume-vampire tropes (pale, fangs, drinks blood, cape, etc.), but I was curious to see if these held up consistently as defining features of vampirism or if it was more complicated, and whether there were perhaps other things that were more important.
+
+Thanks to the diversity of my recommendations (especially the TWENTY! recommendations from my friend Sy), it quickly became clear to me that there is no single feature that all vampires exhibit. Nope, not even blood-drinking. There's instead a constellation of vampiric features, some of which cluster into distinct subgenres like the Dracula/Orlok subgenre, the female temptress subgenre, the jiangshi (Chinese hopping vampire) subgenre, etc. There are also several films that exist in vampire space on their own, not as part of one of these recognizable subgenres. These typically contain characters that have a critical mass of some set of vampiric features, making them a vampire even if other features in the broader constellation are actively negated.
+
+For example, Thirst (2009) is a Korean film that doesn't really fit into a pre-existing subgenre of vampire films. In this film, a priest participates in a clinical trial for a vaccine which fails, infecting him with a virus. This virus turns out to make him want to drink blood and have to stay out of sunlight, both of which are classical features that make this character a vampire, despite the fact that he remains visible in mirrors, contradicting another vampiric trope.
 
 ## themes to cover
 
 ### intertextuality
+
+### Science TM
 
 ### subtlety
 
@@ -22,19 +32,13 @@ Black vampires, antisemitism, othering, that ballet performance with the Chinese
 
 ## gender/sexuality
 
-where 2 start. queer vampires, bisexual vampires, explicitly trans vampires, the kill all men trope, fear of the other once again
+where 2 start. queer vampires, bisexual vampires, explicitly trans vampires, the kill all men trope, fear of the other once again, incel vampires, straight vampires, monogamous vampires, poly vampires
 
 ## do i have anything to say about class???
 
 idk, are ALL vampires actually the aristocratic type? eh... need 2 think about it more
 
-## vampire traits
-
-everything conflicts... is there a unifying vampire trait? what is it?
-
 ## notes
-
-List from Sy and crowdsourced on Twitter (RIP my Twitter)
 
 Watching vampire films and taking notes on vampire appearances - 3/3 are pale, 2/3 have long fingernails, and under this latest movie I just have "appearance: antisemitic??"
 
@@ -55,6 +59,7 @@ Pale, fangs, old (200 years), moves fast, turned at 24, can look at crucifixes, 
 
 permafangs, can't eat human food, can't go into the sunlight, sleep in coffins, turn into bats, cannot look at crucifixes, enmity with werewolves
 
+Thirst: doesn't die when jumps out of window, some virus backstory, welts when he doesn't drink blood, sensitive to smell, visible in mirrors, sunlight kills them, can jump high and slow,
 cameras capture tem
 
 pale (lost a lot of blood, look at his colour), fangs before feeding, cameras dont capture them, repelled by crucifixes, killed by sun,
@@ -76,7 +81,6 @@ Vampire in brookyln: rips heart right out of the guy, dhampir stuff, look this u
 Ganja and hess: dagger to convert, they feel cold, they can eat normal food,
 "dreamlike vampire film which uses vampirism to explore Black assimilation, white cultural imperialism, and the hypocrisy of organised religion"
 
-Thirst: doesn't die when jumps out of window, some virus backstory, welts when he doesn't drink blood, sensitive to smell, visible in mirrors, sunlight kills them, can jump high and slow,
 
 Dracula and his wives turn into wolves and bats, dies without blood, repelled by crosses and wolfsbane, vampire curse lifted when people cured, killed by sunlight
 
@@ -136,3 +140,6 @@ Watched interview with the vampire yesterday it had surprisingly gay vibes and w
 42. Salem's Lot
 43. We Are The Night
 44. Carmilla
+45. Near Dark
+46. The Vampire Lovers
+47. Alucarda
