add h1 in a main content header to every page

--- a/templates/404.md
+++ b/templates/404.md
@@ -6,6 +6,10 @@ layout: layouts/layout
 permalink: 404.html
 ---
 
+<header>
+    <h1>{{ title | escape }}</h1>
+</header>
+
 <p class="centred">
 We searched high and low but could not find what you were looking for...
 </p>
