replace arxiv links

--- a/templates/posts/2024-10-08-emnlp.md
+++ b/templates/posts/2024-10-08-emnlp.md
@@ -31,4 +31,4 @@ Hope to see you there! I'll be the one looking like this, plus or minus the sung
 
 [^covid-complications]: See this [story about the effects of COVID reinfection](https://www.self.com/story/covid-reinfection-health-effects) and this [Nature review article on long COVID](https://www.nature.com/articles/s41591-024-03173-6)
 [^ventilation]: In about 10-20 years I feel very confident that high-performance air filtering will become a standard in most buildings and public spaces, just like other sanitary services like clean water and sewage systems, which will greatly reduce transmission of infectious diseases and remove other allergens I am sensitive to.
-[^emnlp-work]: A TACL paper I led on [pronoun fidelity with language models](https://arxiv.org/abs/2404.03134), a main conference paper I co-led with Arjun Subramonian looking at ["democratization" in machine learning and NLP](https://arxiv.org/abs/2406.11598), a main conference paper Marius Mosbach led on [the impact of interpretability and analysis work on NLP](https://arxiv.org/abs/2406.12618), and a (CRAC) workshop paper I led on [pronominal bias in coreference resolution](https://arxiv.org/abs/2409.05653).
+[^emnlp-work]: A TACL paper I led on [pronoun fidelity with language models](https://direct.mit.edu/tacl/article/doi/10.1162/tacl_a_00719/125951/Robust-Pronoun-Fidelity-with-English-LLMs-Are-they), a main conference paper I co-led with Arjun Subramonian looking at ["democratization" in machine learning and NLP](https://aclanthology.org/2024.emnlp-main.184/), a main conference paper Marius Mosbach led on [the impact of interpretability and analysis work on NLP](https://aclanthology.org/2024.emnlp-main.181/), and a (CRAC) workshop paper I led on [pronominal bias in coreference resolution](https://aclanthology.org/2024.crac-1.6/).
