--- a/templates/posts/2024-10-11-concepts.md
+++ b/templates/posts/2024-10-11-concepts.md
@@ -8,7 +8,7 @@ layout: layouts/post
 ---
 
 I'm thrilled to be teaching next summer at Saarland University, and not just as a co-instructor on an existing course!
-I [designed a seminar](https://www.lsv.uni-saarland.de/upcoming-courses/seminar-defining-and-measuring-abstract-concepts-in-nlp-summer-2025/) to get Masters students comfortable with conceptual work, something that I'm really enjoying doing these days (see our work on [intersectionality](https://dl.acm.org/doi/10.1145/3600211.3604705), [names](https://aclanthology.org/2024.gebnlp-1.20/), and [democratization](https://arxiv.org/abs/2406.11598)).
+I [designed a seminar](https://www.lsv.uni-saarland.de/upcoming-courses/seminar-defining-and-measuring-abstract-concepts-in-nlp-summer-2025/) to get Masters students comfortable with conceptual work, something that I'm really enjoying doing these days (see our work on [intersectionality](https://dl.acm.org/doi/10.1145/3600211.3604705), [names](https://aclanthology.org/2024.gebnlp-1.20/), and [democratization](https://aclanthology.org/2024.emnlp-main.184/)).
 The course is research-focused and reading-heavy (for computer scientists) and I'm looking forward to the discussions we'll have, because I think conceptual work is critical to think about where we are and where we're going in NLP.
 I've chosen a selection of concepts in subfields that I'm familiar with—fairness, interpretability and reasoning—but I welcome additional suggestions for conceptual/critical papers.
 If you're an author of one of the papers I've selected and would be interested in joining our discussion, I'd be thrilled to hear from you.
@@ -119,7 +119,7 @@ Each concept is listed below with a paper that does a critical or conceptual ana
 
 **Reasoning**: [Back to Square One: Artifact Detection, Training and Commonsense Disentanglement in the Winograd Schema](https://aclanthology.org/2021.emnlp-main.819/)[^53]
 
-- [Robust Pronoun Fidelity with English LLMs: Are they Reasoning, Repeating, or Just Biased?](https://arxiv.org/abs/2404.03134)[^54]
+- [Robust Pronoun Fidelity with English LLMs: Are they Reasoning, Repeating, or Just Biased?](https://direct.mit.edu/tacl/article/doi/10.1162/tacl_a_00719/125951/Robust-Pronoun-Fidelity-with-English-LLMs-Are-they)[^54]
 - [Reasoning or Reciting? Exploring the Capabilities and Limitations of Language Models Through Counterfactual Tasks](https://aclanthology.org/2024.naacl-long.102/)[^55]
 - [Chain-of-Thought Prompting Elicits Reasoning in Large Language Models](https://arxiv.org/abs/2201.11903)[^56]
 
