--- a/templates/posts/2024-11-19-pronouns.md
+++ b/templates/posts/2024-11-19-pronouns.md
@@ -73,7 +73,7 @@ When do names say something about a person's gender, race, and other sociodemogr
 How well do large language models reuse pronouns for an individual when we're talking about two people who use different pronouns?
 
 <paper>
-  <b><a href="https://arxiv.org/abs/2404.03134">Robust Pronoun Fidelity with English LLMs: Are they Reasoning, Repeating, or Just Biased?</a></b><br>
+  <b><a href="https://direct.mit.edu/tacl/article/doi/10.1162/tacl_a_00719/125951/Robust-Pronoun-Fidelity-with-English-LLMs-Are-they">Robust Pronoun Fidelity with English LLMs: Are they Reasoning, Repeating, or Just Biased?</a></b><br>
   Vagrant Gautam, Eileen Bingert, Dawei Zhu, Anne Lauscher, Dietrich Klakow.<br>
   <em>Transactions of ACL, 2024.</em>
 </paper>
@@ -81,7 +81,7 @@ How well do large language models reuse pronouns for an individual when we're ta
 How reliably can large language models map different kinds of pronouns to the right people? How should we map pronouns to (social) gender?
 
 <paper>
-  <b><a href="http://arxiv.org/abs/2409.05653">WinoPron: Revisiting English Winogender Schemas for Consistency, Coverage, and Grammatical Case</a></b><br>
+  <b><a href="https://aclanthology.org/2024.crac-1.6/">WinoPron: Revisiting English Winogender Schemas for Consistency, Coverage, and Grammatical Case</a></b><br>
   Vagrant Gautam, Julius Steuer, Eileen Bingert, Ray Johns, Anne Lauscher, Dietrich Klakow.<br>
   <em>Workshop on Computational Models of Reference, Anaphora and Coreference, 2024.</em>
 </paper>
