add concepts paper

--- a/templates/posts/2024-10-11-concepts.md
+++ b/templates/posts/2024-10-11-concepts.md
@@ -7,6 +7,14 @@ tags:
 layout: layouts/post
 ---
 
+A more formal and citable version of this syllabus is now available here:
+
+<paper>
+  <b><a href="https://arxiv.org/abs/2512.18505">Teaching and Critiquing Conceptualization and Operationalization in NLP</a></b><br>
+  Vagrant Gautam.<br>
+  <em>Preprint, 2025.</em>
+</paper>
+
 I'm thrilled to be teaching next summer at Saarland University, and not just as a co-instructor on an existing course!
 I [designed a seminar](https://www.lsv.uni-saarland.de/upcoming-courses/seminar-defining-and-measuring-abstract-concepts-in-nlp-summer-2025/) to get Masters students comfortable with conceptual work, something that I'm really enjoying doing these days (see our work on [intersectionality](https://dl.acm.org/doi/10.1145/3600211.3604705), [names](https://aclanthology.org/2024.gebnlp-1.20/), and [democratization](https://aclanthology.org/2024.emnlp-main.184/)).
 The course is research-focused and reading-heavy (for computer scientists) and I'm looking forward to the discussions we'll have, because I think conceptual work is critical to think about where we are and where we're going in NLP.
