--- a/templates/posts/2025-07-15-concepts.md
+++ b/templates/posts/2025-07-15-concepts.md
@@ -7,6 +7,14 @@ tags:
 layout: layouts/post
 ---
 
+A more formal and citable version of this course is now available here:
+
+<paper>
+  <b><a href="https://arxiv.org/abs/2512.18505">Teaching and Critiquing Conceptualization and Operationalization in NLP</a></b><br>
+  Vagrant Gautam.<br>
+  <em>Preprint, 2025.</em>
+</paper>
+
 The summer semester is nearly over, and that means my seminar on defining and measuring abstract concepts in NLP is also almost done!
 The class exceeded my expectations:
 My students were very active in discussions, bringing very different perspectives to class from their personal, professional, and academic experiences, and we all learned a lot.
